RF: partial refactor of bdist_egg into method

--- a/master.cfg
+++ b/master.cfg
@@ -129,7 +129,8 @@ class GithubBot(object):
                  easy_depends=(),
                  pip_depends=(),
                  doc_easy_depends=('sphinx',),
-                 src_subdir=None):
+                 src_subdir=None,
+                 download_dir=None):
         self.organization = organization
         self.repo = repo
         self.git_url = "git://github.com/%s/%s.git" % (organization, repo)
@@ -141,6 +142,8 @@ class GithubBot(object):
         self.pip_depends = pip_depends # pip
         self.doc_easy_depends = doc_easy_depends # easy_installs for docs
         self.src_subdir = src_subdir # Subdirectory containing source
+        if download_dir is None:
+            download_dir = '%s-dist' % repo
 
     def poller(self, branch="master", interval=300):
         return GitPoller(
@@ -214,8 +217,7 @@ class GithubBot(object):
         for pkg_spec in pip_depends:
             factory.addStep(ShellCommand(command=[
                         'pip', 'install', pkg_spec], env=my_env))
-        # Install into virtualenv
-        install_cmd = ['python', 'setup.py', 'install']
+        # Work out working directory for install
         if not self.src_subdir is None:
             factory.addStep(SetProperty(command=[
                 'python', 'bs_tools.py', 'abspath', self.src_subdir],
@@ -223,9 +225,7 @@ class GithubBot(object):
             build_workdir = WithProperties("%(src_path)s")
         else:
             build_workdir = None
-        factory.addStep(ShellCommand(command=install_cmd, env=my_env,
-                        workdir=build_workdir))
-        return factory, my_env, workdir
+        return factory, my_env, workdir, build_workdir
 
     def factory(self,
                 test_cmd=None,
@@ -234,10 +234,50 @@ class GithubBot(object):
                 pip_depends=None):
         if test_cmd is None:
             test_cmd = self.test_cmd
-        factory, env, workdir = self._code_build_factory(
+        factory, env, workdir, build_workdir = self._code_build_factory(
             python, easy_depends, pip_depends)
+        # Install into virtualenv
+        factory.addStep(ShellCommand(
+            command=['python', 'setup.py', 'install'],
+            env=env,
+            workdir=build_workdir))
+        # Test
         factory.addStep(ShellCommand(command=test_cmd,
             env=env, workdir=workdir))
+        return factory
+
+    def bdist_egg_factory(self,
+                          test_cmd=None,
+                          python=None,
+                          easy_depends=None,
+                          pip_depends=None):
+        if test_cmd is None:
+            test_cmd = self.test_cmd
+        factory, env, workdir, build_workdir = self._code_build_factory(
+            python, easy_depends, pip_depends)
+        # Build egg, mpkg
+        my_python = 'python' if python is None else python
+        factory.addStep(ShellCommand(
+            command=[my_python, 'setup.py', 'bdist_egg'],
+            env=env,
+            workdir=build_workdir))
+        factory.addStep(ShellCommand(
+            command=[my_python, 'setup.py', 'bdist_mpkg'],
+            env=env,
+            workdir=build_workdir))
+        # Install egg into virtualenv
+        factory.addStep(SetProperty(command=shlex.split(
+            'python bs_tools.py glob build dist "*.egg"'),
+            property='egg_file'))
+        factory.addStep(ShellCommand(
+            command=[ 'easy_install', WithProperties('%(egg_file)s')],
+            env=env))
+        # Test
+        factory.addStep(ShellCommand(command=test_cmd,
+            env=env, workdir=workdir))
+        # Upload
+        factory.addStep(DirectoryUpload(slavesrc="dist",
+                masterdest="public_html/" + self.download_dir))
         return factory
 
     def doc_factory(self,
