RF: try to generalize bdist'ing to exe files

--- a/master.cfg
+++ b/master.cfg
@@ -246,7 +246,8 @@ class GithubBot(object):
             env=env, workdir=workdir))
         return factory
 
-    def bdist_egg_factory(self,
+    def bdist_factory(self,
+                          bdist_type,
                           test_cmd=None,
                           python=None,
                           easy_depends=None,
@@ -255,22 +256,33 @@ class GithubBot(object):
             test_cmd = self.test_cmd
         factory, env, workdir, build_workdir = self._code_build_factory(
             python, easy_depends, pip_depends)
-        # Build egg, mpkg
+        # Build binary format(s)
         my_python = 'python' if python is None else python
+        if bdist_type == 'egg':
+            factory.addStep(ShellCommand(
+                command=[my_python, 'setup.py', 'bdist_egg'],
+                env=env,
+                workdir=build_workdir))
+            factory.addStep(ShellCommand(
+                command=[my_python, 'setup.py', 'bdist_mpkg'],
+                env=env,
+                workdir=build_workdir))
+            factory.addStep(SetProperty(command=shlex.split(
+                'python bs_tools.py glob build dist "*.egg"'),
+                property='bdist_file'))
+        elif bdist_type == 'exe':
+            factory.addStep(ShellCommand(
+                command=[my_python, 'setup.py', 'bdist' '--formats=wininst'],
+                env=env,
+                workdir=build_workdir))
+            factory.addStep(SetProperty(command=shlex.split(
+                'python bs_tools.py glob build dist "*.exe"'),
+                property='bdist_file'))
+        else:
+            raise ValueError('What is this?: ' + bdist_type)
+        # Install into virtualenv
         factory.addStep(ShellCommand(
-            command=[my_python, 'setup.py', 'bdist_egg'],
-            env=env,
-            workdir=build_workdir))
-        factory.addStep(ShellCommand(
-            command=[my_python, 'setup.py', 'bdist_mpkg'],
-            env=env,
-            workdir=build_workdir))
-        # Install egg into virtualenv
-        factory.addStep(SetProperty(command=shlex.split(
-            'python bs_tools.py glob build dist "*.egg"'),
-            property='egg_file'))
-        factory.addStep(ShellCommand(
-            command=[ 'easy_install', WithProperties('%(egg_file)s')],
+            command=[ 'easy_install', WithProperties('%(bdist_file)s')],
             env=env))
         # Test
         factory.addStep(ShellCommand(command=test_cmd,
