BF: refactor doc factory to bdist refactor

--- a/master.cfg
+++ b/master.cfg
@@ -302,7 +302,12 @@ class GithubBot(object):
             built_doc_src = self.built_doc_src
         if None in (doc_build_cmd, built_doc_src):
             raise ValueError("Need defined build command and doc source")
-        factory, env, workdir = self._code_build_factory()
+        factory, env, workdir, build_workdir = self._code_build_factory()
+        # Install into virtualenv
+        factory.addStep(ShellCommand(
+            command=['python', 'setup.py', 'install'],
+            env=env,
+            workdir=build_workdir))
         for pkg_spec in self.doc_easy_depends:
             factory.addStep(ShellCommand(command=[
                         'easy_install', pkg_spec], env=env))
