RF: try plumbing in bdist factory

--- a/master.cfg
+++ b/master.cfg
@@ -247,11 +247,11 @@ class GithubBot(object):
         return factory
 
     def bdist_factory(self,
-                          bdist_type,
-                          test_cmd=None,
-                          python=None,
-                          easy_depends=None,
-                          pip_depends=None):
+                      bdist_type,
+                      test_cmd=None,
+                      python=None,
+                      easy_depends=None,
+                      pip_depends=None):
         if test_cmd is None:
             test_cmd = self.test_cmd
         factory, env, workdir, build_workdir = self._code_build_factory(
@@ -773,11 +773,10 @@ nipy_test_cmd = nptest_command('nipy', doctests=True, exe=True)
 c['builders'].append(BuilderConfig(
     name='nipy-bdist-mpkg-2.6',
     slavenames=['osx-10.6'],
-    factory=bdist_egg_factory(
-        'git://github.com/nipy/nipy.git',
-        '/Library/Frameworks/Python.framework/Versions/2.6',
-        "nipy-dist",
-        nipy_test_cmd)
+    factory=nipy_bot.bdist_factory(
+        'egg',
+        test_cmd=nipy_test_cmd,
+        python='/Library/Frameworks/Python.framework/Versions/2.6/bin/python')
 ))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist-mpkg-2.7',
