--- a/master.cfg
+++ b/master.cfg
@@ -144,6 +144,7 @@ class GithubBot(object):
         self.src_subdir = src_subdir # Subdirectory containing source
         if download_dir is None:
             download_dir = '%s-dist' % repo
+        self.download_dir = download_dir
 
     def poller(self, branch="master", interval=300):
         return GitPoller(
