RF: fix glob path

--- a/master.cfg
+++ b/master.cfg
@@ -269,7 +269,7 @@ class GithubBot(object):
                 env=env,
                 workdir=build_workdir))
             factory.addStep(SetProperty(command=shlex.split(
-                'python bs_tools.py glob build dist "*.egg"'),
+                'python bs_tools.py glob dist "*.egg"'),
                 property='bdist_file'))
         elif bdist_type == 'exe':
             factory.addStep(ShellCommand(
@@ -277,7 +277,7 @@ class GithubBot(object):
                 env=env,
                 workdir=build_workdir))
             factory.addStep(SetProperty(command=shlex.split(
-                'python bs_tools.py glob build dist "*.exe"'),
+                'python bs_tools.py glob dist "*.exe"'),
                 property='bdist_file'))
         else:
             raise ValueError('What is this?: ' + bdist_type)
