Attempt full move to refactored bdist_factory

--- a/master.cfg
+++ b/master.cfg
@@ -185,13 +185,17 @@ class GithubBot(object):
     def _code_build_factory(self,
                             python=None,
                             easy_depends=None,
-                            pip_depends=None):
+                            pip_depends=None,
+                            pre_cmds=()):
         if easy_depends is None:
             easy_depends = self.easy_depends
         if pip_depends is None:
             pip_depends = self.pip_depends
         factory = BuildFactory()
         factory.addStep(Git(repourl=self.git_url, mode='copy', retry=(15, 5)))
+        # Any pre-building commands
+        for cmd in pre_cmds:
+            factory.addStep(ShellCommand(command=shlex.split(cmd, posix=False)))
         # Obviously requires virtualenv on the slave
         if python is None:
             py_str=''
@@ -232,11 +236,12 @@ class GithubBot(object):
                 test_cmd=None,
                 python=None,
                 easy_depends=None,
-                pip_depends=None):
+                pip_depends=None,
+                pre_cmds=()):
         if test_cmd is None:
             test_cmd = self.test_cmd
         factory, env, workdir, build_workdir = self._code_build_factory(
-            python, easy_depends, pip_depends)
+            python, easy_depends, pip_depends, pre_cmds)
         # Install into virtualenv
         factory.addStep(ShellCommand(
             command=['python', 'setup.py', 'install'],
@@ -252,11 +257,12 @@ class GithubBot(object):
                       test_cmd=None,
                       python=None,
                       easy_depends=None,
-                      pip_depends=None):
+                      pip_depends=None,
+                      pre_cmds=()):
         if test_cmd is None:
             test_cmd = self.test_cmd
         factory, env, workdir, build_workdir = self._code_build_factory(
-            python, easy_depends, pip_depends)
+            python, easy_depends, pip_depends, pre_cmds)
         # Build binary format(s)
         my_python = 'python' if python is None else python
         if bdist_type == 'egg':
@@ -708,66 +714,61 @@ def example_factory(git_url, py_path, out_dir, python_cmd='python'):
 # only take place on one slave.
 
 c['builders'] = []
+# nibabel exe builders
 nibabel_test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest nibabel')
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist32-26',
     slavenames=xp_32_slaves,
-    factory=bdist_wininst_factory(
-        'git://github.com/nipy/nibabel.git',
-        r'c:\Python26',
-        "nibabel-dist",
-        nibabel_test_cmd
+    factory=nibabel_bot.bdist_factory(
+        'exe',
+        test_cmd = nibabel_test_cmd,
+        python = r'c:\Python26\Python')
 ))
-)
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist32-32',
     slavenames=xp_32_slaves,
-    factory=bdist_wininst_factory(
-        'git://github.com/nipy/nibabel.git',
-        r'c:\Python32',
-        "nibabel-dist",
-        nibabel_test_cmd
+    factory=nibabel_bot.bdist_factory(
+        'exe',
+        test_cmd = nibabel_test_cmd,
+        python = r'c:\Python32\Python')
 ))
-)
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist64-26',
     slavenames=win7_64_slaves,
-    factory=bdist_wininst_factory(
-        'git://github.com/nipy/nibabel.git',
-        r'c:\Python26',
-        "nibabel-dist",
-        nibabel_test_cmd
+    factory=nibabel_bot.bdist_factory(
+        'exe',
+        test_cmd = nibabel_test_cmd,
+        python = r'c:\Python26\Python')
 ))
-)
+# nipy exe builders
 nipy_test_cmd = nptest_command('nipy', doctests=True)
 c['builders'].append(BuilderConfig(
     name='nipy-bdist32-26',
     slavenames=xp_32_slaves,
-    factory=bdist_wininst_factory(
-        'git://github.com/nipy/nipy.git',
-        r'c:\Python26',
-        'nipy-dist',
-        nipy_test_cmd,
-        [r'python tools\touch_cython_cs.py'])))
+    factory=nipy_bot.bdist_factory(
+        'exe',
+        test_cmd = nipy_test_cmd,
+        python = r'c:\Python26\Python',
+        pre_cmds = [r'python tools\touch_cython_cs.py'])
+))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist32-27',
     slavenames=xp_32_slaves,
-    factory=bdist_wininst_factory(
-        'git://github.com/nipy/nipy.git',
-        r'c:\Python27',
-        'nipy-dist',
-        nipy_test_cmd,
-        [r'python tools\touch_cython_cs.py'])))
+    factory=nipy_bot.bdist_factory(
+        'exe',
+        test_cmd = nipy_test_cmd,
+        python = r'c:\Python27\Python',
+        pre_cmds = [r'python tools\touch_cython_cs.py'])
+))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist32-32',
     slavenames=xp_32_slaves,
-    factory=bdist_wininst_factory(
-        'git://github.com/nipy/nipy.git',
-        r'c:\Python32',
-        'nipy-dist',
-        nipy_test_cmd,
-        [r'python tools\touch_cython_cs.py'])))
-
+    factory=nipy_bot.bdist_factory(
+        'exe',
+        test_cmd = nipy_test_cmd,
+        python = r'c:\Python32\Python',
+        pre_cmds = [r'python tools\touch_cython_cs.py'])
+))
 # Add bdist builders for OSX
 # Need exe because easy_install makes tests executable on 3.3
 nipy_test_cmd = nptest_command('nipy', doctests=True, exe=True)
@@ -782,21 +783,18 @@ c['builders'].append(BuilderConfig(
 c['builders'].append(BuilderConfig(
     name='nipy-bdist-mpkg-2.7',
     slavenames=['osx-10.6'],
-    factory=bdist_egg_factory(
-        'git://github.com/nipy/nipy.git',
-        '/Library/Frameworks/Python.framework/Versions/2.7',
-        "nipy-dist",
-        nipy_test_cmd)
+    factory=nipy_bot.bdist_factory(
+        'egg',
+        test_cmd=nipy_test_cmd,
+        python='/Library/Frameworks/Python.framework/Versions/2.7/bin/python')
 ))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist-mpkg-3.3',
     slavenames=['osx-10.6'],
-    factory=bdist_egg_factory(
-        'git://github.com/nipy/nipy.git',
-        '/Library/Frameworks/Python.framework/Versions/3.3',
-        "nipy-dist",
-        nipy_test_cmd,
-        python_cmd="python3")
+    factory=nipy_bot.bdist_factory(
+        'egg',
+        test_cmd=nipy_test_cmd,
+        python='/Library/Frameworks/Python.framework/Versions/3.3/bin/python3')
 ))
 ##############################
 # Dipy builders
@@ -805,59 +803,54 @@ win_dipy_test_cmd = ['python',  r'..\tools\dipnost', 'dipy']
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-26',
     slavenames=xp_32_slaves,
-    factory=bdist_wininst_factory(
-        'git://github.com/nipy/dipy.git',
-        r'c:\Python26',
-        'dipy-dist',
-        win_dipy_test_cmd)))
+    factory=dipy_bot.bdist_factory(
+        'exe',
+        test_cmd=win_dipy_test_cmd,
+        python=r'c:\Python26\Python')
+))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-27',
     slavenames=xp_32_slaves,
-    factory=bdist_wininst_factory(
-        'git://github.com/nipy/dipy.git',
-        r'c:\Python27',
-        'dipy-dist',
-        win_dipy_test_cmd)))
+    factory=dipy_bot.bdist_factory(
+        'exe',
+        test_cmd=win_dipy_test_cmd,
+        python=r'c:\Python27\Python')
+))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-32',
     slavenames=xp_32_slaves,
-    factory=bdist_wininst_factory(
-        'git://github.com/nipy/dipy.git',
-        r'c:\Python32',
-        'dipy-dist',
-        win_dipy_test_cmd)))
-
+    factory=dipy_bot.bdist_factory(
+        'exe',
+        test_cmd=win_dipy_test_cmd,
+        python=r'c:\Python32\Python')
+))
 # Add bdist builders for OSX
 # Each of the tested _system_ pythons will need:
-# * numpy, scipy, cython, nibabel, virtualenv, bdist_mpkg
+# * numpy, scipy, virtualenv, bdist_mpkg
 osx_dipy_test_cmd = ['python',  '../tools/dipnost', '--exe', '--verbosity=3', 'dipy']
 c['builders'].append(BuilderConfig(
     name='dipy-bdist-mpkg-2.6',
     slavenames=['osx-10.6'],
-    factory=bdist_egg_factory(
-        'git://github.com/nipy/dipy.git',
-        '/Library/Frameworks/Python.framework/Versions/2.6',
-        "dipy-dist",
-        osx_dipy_test_cmd)
+    factory=dipy_bot.bdist_factory(
+        'egg',
+        test_cmd=osx_dipy_test_cmd,
+        python='/Library/Frameworks/Python.framework/Versions/2.6/bin/python')
 ))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist-mpkg-2.7',
     slavenames=['osx-10.6'],
-    factory=bdist_egg_factory(
-        'git://github.com/nipy/dipy.git',
-        '/Library/Frameworks/Python.framework/Versions/2.7',
-        "dipy-dist",
-        osx_dipy_test_cmd)
+    factory=dipy_bot.bdist_factory(
+        'egg',
+        test_cmd=osx_dipy_test_cmd,
+        python='/Library/Frameworks/Python.framework/Versions/2.7/bin/python')
 ))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist-mpkg-3.3',
     slavenames=['osx-10.6'],
-    factory=bdist_egg_factory(
-        'git://github.com/nipy/dipy.git',
-        '/Library/Frameworks/Python.framework/Versions/3.3',
-        "dipy-dist",
-        ['python3',  '../tools/dipnost', '--exe', '--verbosity=3', 'dipy'],
-        python_cmd="python3")
+    factory=dipy_bot.bdist_factory(
+        'egg',
+        test_cmd=osx_dipy_test_cmd,
+        python='/Library/Frameworks/Python.framework/Versions/3.3/bin/python3')
 ))
 # Add nightly docs builders
 c['builders'] += nipy_bot.build_doc_builders(
