Try to clean up virtualenv command for windows

--- a/master.cfg
+++ b/master.cfg
@@ -197,12 +197,10 @@ class GithubBot(object):
         for cmd in pre_cmds:
             factory.addStep(ShellCommand(command=shlex.split(cmd, posix=False)))
         # Obviously requires virtualenv on the slave
-        if python is None:
-            py_str=''
-        else:
-            py_str = '--python=' + python
-        factory.addStep(ShellCommand(command=shlex.split(
-            'virtualenv %s --system-site-packages venv' % py_str)))
+        virtualenv_cmd = ['--system-site-packages', 'venv']
+        if not python is None:
+            virtualenv_cmd = ['--python=' + python] + virtualenv_cmd
+        factory.addStep(ShellCommand(command=['virtualenv'] + virtualenv_cmd))
         # Now we need the venv binary directory
         factory.addStep(FileDownload('slave_scripts/bs_tools.py',
                                      'bs_tools.py'))
