Fix python full path on windows

--- a/master.cfg
+++ b/master.cfg
@@ -197,10 +197,10 @@ class GithubBot(object):
         for cmd in pre_cmds:
             factory.addStep(ShellCommand(command=shlex.split(cmd, posix=False)))
         # Obviously requires virtualenv on the slave
-        virtualenv_cmd = ['--system-site-packages', 'venv']
+        venv_params = ['--distribute', '--system-site-packages', 'venv']
         if not python is None:
-            virtualenv_cmd = ['--python=' + python] + virtualenv_cmd
-        factory.addStep(ShellCommand(command=['virtualenv'] + virtualenv_cmd))
+            venv_params = ['--python=' + python] + venv_params
+        factory.addStep(ShellCommand(command=['virtualenv'] + venv_params))
         # Now we need the venv binary directory
         factory.addStep(FileDownload('slave_scripts/bs_tools.py',
                                      'bs_tools.py'))
@@ -720,7 +720,7 @@ c['builders'].append(BuilderConfig(
     factory=nibabel_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
-        python = r'c:\Python26\Python')
+        python = r'c:\Python26\python.exe')
 ))
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist32-32',
@@ -728,7 +728,7 @@ c['builders'].append(BuilderConfig(
     factory=nibabel_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
-        python = r'c:\Python32\Python')
+        python = r'c:\Python32\python.exe')
 ))
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist64-26',
@@ -736,7 +736,7 @@ c['builders'].append(BuilderConfig(
     factory=nibabel_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
-        python = r'c:\Python26\Python')
+        python = r'c:\Python26\python.exe')
 ))
 # nipy exe builders
 nipy_test_cmd = nptest_command('nipy', doctests=True)
@@ -746,7 +746,7 @@ c['builders'].append(BuilderConfig(
     factory=nipy_bot.bdist_factory(
         'exe',
         test_cmd = nipy_test_cmd,
-        python = r'c:\Python26\Python',
+        python = r'c:\Python26\python.exe',
         pre_cmds = [r'python tools\touch_cython_cs.py'])
 ))
 c['builders'].append(BuilderConfig(
@@ -755,7 +755,7 @@ c['builders'].append(BuilderConfig(
     factory=nipy_bot.bdist_factory(
         'exe',
         test_cmd = nipy_test_cmd,
-        python = r'c:\Python27\Python',
+        python = r'c:\Python27\python.exe',
         pre_cmds = [r'python tools\touch_cython_cs.py'])
 ))
 c['builders'].append(BuilderConfig(
@@ -764,7 +764,7 @@ c['builders'].append(BuilderConfig(
     factory=nipy_bot.bdist_factory(
         'exe',
         test_cmd = nipy_test_cmd,
-        python = r'c:\Python32\Python',
+        python = r'c:\Python32\python.exe',
         pre_cmds = [r'python tools\touch_cython_cs.py'])
 ))
 # Add bdist builders for OSX
@@ -804,7 +804,7 @@ c['builders'].append(BuilderConfig(
     factory=dipy_bot.bdist_factory(
         'exe',
         test_cmd=win_dipy_test_cmd,
-        python=r'c:\Python26\Python')
+        python=r'c:\Python26\python.exe')
 ))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-27',
@@ -812,7 +812,7 @@ c['builders'].append(BuilderConfig(
     factory=dipy_bot.bdist_factory(
         'exe',
         test_cmd=win_dipy_test_cmd,
-        python=r'c:\Python27\Python')
+        python=r'c:\Python27\python.exe')
 ))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-32',
@@ -820,7 +820,7 @@ c['builders'].append(BuilderConfig(
     factory=dipy_bot.bdist_factory(
         'exe',
         test_cmd=win_dipy_test_cmd,
-        python=r'c:\Python32\Python')
+        python=r'c:\Python32\python.exe')
 ))
 # Add bdist builders for OSX
 # Each of the tested _system_ pythons will need:
