Fix missing comma

--- a/master.cfg
+++ b/master.cfg
@@ -277,7 +277,7 @@ class GithubBot(object):
                 property='bdist_file'))
         elif bdist_type == 'exe':
             factory.addStep(ShellCommand(
-                command=[my_python, 'setup.py', 'bdist' '--formats=wininst'],
+                command=[my_python, 'setup.py', 'bdist', '--formats=wininst'],
                 env=env,
                 workdir=build_workdir))
             factory.addStep(SetProperty(command=shlex.split(
