Try to use virtualenv installs during bdist builds

--- a/master.cfg
+++ b/master.cfg
@@ -262,7 +262,16 @@ class GithubBot(object):
         factory, env, workdir, build_workdir = self._code_build_factory(
             python, easy_depends, pip_depends, pre_cmds)
         # Build binary format(s)
-        my_python = 'python' if python is None else python
+        if python is None: # Use virtualenv python
+            my_python = 'python'
+        else: # Use specified python
+            my_python = python
+            # Insert virtualenv into PYTHONPATH for building using virtualenv
+            # dependencies
+            factory.addStep(SetProperty(command=shlex.split(
+                'python bs_tools.py get-python-lib'),
+                property='python-lib'))
+            env['PYTHONPATH'] = WithProperties("%(python-lib)s")
         if bdist_type == 'egg':
             factory.addStep(ShellCommand(
                 command=[my_python, 'setup.py', 'bdist_egg'],
