Maybe wrong variable name for property?

--- a/master.cfg
+++ b/master.cfg
@@ -270,8 +270,8 @@ class GithubBot(object):
             # dependencies
             factory.addStep(SetProperty(command=shlex.split(
                 'python bs_tools.py get-python-lib'),
-                property='python-lib'))
-            env['PYTHONPATH'] = WithProperties("%(python-lib)s")
+                property='python_lib'))
+            env['PYTHONPATH'] = WithProperties("%(python_lib)s")
         if bdist_type == 'egg':
             factory.addStep(ShellCommand(
                 command=[my_python, 'setup.py', 'bdist_egg'],
