Try to fix use of virtualenv installs for bdist

--- a/master.cfg
+++ b/master.cfg
@@ -264,22 +264,24 @@ class GithubBot(object):
         # Build binary format(s)
         if python is None: # Use virtualenv python
             my_python = 'python'
+            build_env = env
         else: # Use specified python
             my_python = python
             # Insert virtualenv into PYTHONPATH for building using virtualenv
             # dependencies
             factory.addStep(SetProperty(command=shlex.split(
                 'python bs_tools.py get-python-lib'),
-                property='python_lib'))
-            env['PYTHONPATH'] = WithProperties("%(python_lib)s")
+                property='venv_python_lib', env=env))
+            build_env = env.copy()
+            build_env['PYTHONPATH'] = WithProperties("%(venv_python_lib)s")
         if bdist_type == 'egg':
             factory.addStep(ShellCommand(
                 command=[my_python, 'setup.py', 'bdist_egg'],
-                env=env,
+                env=build_env,
                 workdir=build_workdir))
             factory.addStep(ShellCommand(
                 command=[my_python, 'setup.py', 'bdist_mpkg'],
-                env=env,
+                env=build_env,
                 workdir=build_workdir))
             factory.addStep(SetProperty(command=shlex.split(
                 'python bs_tools.py glob dist "*.egg"'),
@@ -287,7 +289,7 @@ class GithubBot(object):
         elif bdist_type == 'exe':
             factory.addStep(ShellCommand(
                 command=[my_python, 'setup.py', 'bdist', '--formats=wininst'],
-                env=env,
+                env=build_env,
                 workdir=build_workdir))
             factory.addStep(SetProperty(command=shlex.split(
                 'python bs_tools.py glob dist "*.exe"'),
@@ -399,27 +401,27 @@ nipy_bot = GithubBot('nipy', 'nipy',
     test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
     built_doc_src = "doc/dist",
-    easy_depends = ('nose', 'nibabel'),
-    pip_depends = ('sympy',),
+    easy_depends = ('nose',),
+    pip_depends = ('sympy', 'nibabel')
 )
 nipy_mbi_bot = GithubBot('matthew-brett', 'nipy',
     test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
     built_doc_src = "doc/dist",
-    easy_depends = ('nose', 'nibabel'),
-    pip_depends = ('sympy',),
+    easy_depends = ('nose',),
+    pip_depends = ('sympy', 'nibabel')
 )
 nipy_alexis_bot = GithubBot('alexis-roche', 'nipy',
     test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
     built_doc_src = "doc/dist",
-    easy_depends = ('nose', 'nibabel'),
-    pip_depends = ('sympy',),
+    easy_depends = ('nose',),
+    pip_depends = ('sympy', 'nibabel')
 )
 dipy_bot = GithubBot('nipy', 'dipy',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest dipy'),
-    easy_depends = ('nose', 'nibabel'),
-    pip_depends = ('cython>=0.17',)
+    easy_depends = ('nose',),
+    pip_depends = ('cython>=0.17', 'nibabel')
 )
 # dipy bot for linux machines with optional easy_depends that need an X window
 # for testing
