Add sympy, nibabel version checker for nipy

--- a/master.cfg
+++ b/master.cfg
@@ -484,6 +484,7 @@ c['schedulers'] = [
                         'nipy-py2.6-osx-10.5-intel',
                         'nipy-py3.2',
                         'nipy-py3.3',
+                        'nipy-py2.7-sym0.6.6-nib1.2.0',
                        ]),
     dipy_bot.scheduler(['dipy-py2.6',
                         'dipy-py2.6-32',
@@ -873,6 +874,10 @@ c['builders'] += nipy_bot.build_builders(
 c['builders'] += nipy_bot.build_builders(
     (('nipy-py3.3', osx_snowleopard_slaves),),
     python='python3.3')
+# Different versions of Sympy, nibabel
+c['builders'] += nipy_bot.build_builders(
+    (('nipy-py2.7-sym0.6.6-nib1.2.0', osx_mountainlion_slaves),),
+    pip_depends = ('sympy=0.6.6', 'nibabel==1.2.0'))
 # The dipy builder seems to fail early sometimes, on OSX, maybe due to:
 # http://bugs.python.org/issue8458
 c['builders'] += dipy_bot_nox.build_builders(
