ENH: adding basic (untested) configuration for pandas testing on sparc boxes

--- a/master.cfg
+++ b/master.cfg
@@ -96,15 +96,17 @@ experimental = ['pi-ApxuMed',]
 
 linux_64_slaves = ['tom-standard']
 linux_32_slaves = ['bongoslave']
+debian_ppc_slaves = ['debian-ppc-32']
+sparc_slaves_recent = ['nd-bb-slave-sparc-wheezy',
+                       'nd-bb-slave-sparc-sid']
+sparc_slaves = ['nd-bb-slave-sparc'] + sparc_slaves_recent
 osx_leopard_ppc_slaves = ['osx-10.5-ppc']
 osx_tiger_ppc_slaves = ['osx-mini']
-debian_ppc_slaves = ['debian-ppc-32']
 osx_leopard_intel_slaves = ['osx-10.5']
 osx_snowleopard_slaves = ['osx-10.6']
 osx_mountainlion_slaves = ['osx-10.8']
 xp_32_slaves = ['xp-mini']
 win7_64_slaves = ['mike-win7-64']
-sparc_slaves = ['nd-bb-slave-sparc']
 arm_slaves = ['arm-raspberry-pi']
 
 # slave names must be unique
@@ -424,7 +426,14 @@ regreg_bot = GithubBot('regreg', 'regreg',
     easy_depends = ('nose',),
     src_subdir = 'code'
 )
-
+# pandas bot, primarily for sparc testing
+pandas_bot = GithubBot('pydata', 'pandas',
+    test_cmd = nptest_command('pandas', doctests=True),
+    doc_build_cmd = "make doc",
+    built_doc_src = "doc/dist",
+    easy_depends = ('nose',),
+    pip_depends = ('cython>=0.17',)
+)
 ####### CHANGESOURCES
 
 # the 'change_source' setting tells the buildmaster how it should find out
@@ -438,6 +447,7 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                dipy_bot,
                                                nipype_bot,
                                                regreg_bot,
+                                               pandas_bot,
                                               )]
 
 
@@ -513,6 +523,9 @@ c['schedulers'] = [
                           'regreg-py2.7-osx-10.4-ppc',
                           'regreg-py2.6-osx-10.5-ppc',
                           'regreg-py2.6-osx-10.5-intel',
+                       ]),
+    pandas_bot.scheduler([
+                        'pandas-py2.x-sparc',
                        ]),
     nipy_bot.nightly_scheduler(['nipy-doc-builder'], 'doc', 2, 01, True),
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
@@ -922,7 +935,13 @@ c['builders'] += regreg_bot.build_builders(
      ('regreg-py2.6-arm', arm_slaves),
      ('regreg-py2.6-xp', xp_32_slaves),
      ('regreg-py2.6-sparc', sparc_slaves)))
-
+# Pandas - can be tested only on recent debian releases
+c['builders'] += pandas_bot.build_builders(
+    (('pandas-py2.x-sparc', sparc_slaves_recent)))
+# and python3 builders
+c['builders'] += dipy_bot.build_builders(
+    (('pandas-py3.x-sparc', sparc_slaves_recent),),
+    python='python3')
 """ Disabling these guys; they haven't worked for a while
 c['builders'].append(
     BuilderConfig(name="buildout-test2.6",
