on behalf of someone wise commiting a fix to pip_depends for nipy_bot

--- a/master.cfg
+++ b/master.cfg
@@ -890,7 +890,7 @@ c['builders'] += nipy_bot.build_builders(
 # Different versions of Sympy, nibabel
 c['builders'] += nipy_bot.build_builders(
     (('nipy-py2.7-sym0.6.6-nib1.2.0', osx_mountainlion_slaves),),
-    pip_depends = ('sympy=0.6.6', 'nibabel==1.2.0'))
+    pip_depends = ('sympy==0.6.6', 'nibabel==1.2.0'))
 # The dipy builder seems to fail early sometimes, on OSX, maybe due to:
 # http://bugs.python.org/issue8458
 c['builders'] += dipy_bot_nox.build_builders(
