Fixing up pandas definitions and adding python3 builders to the list

--- a/master.cfg
+++ b/master.cfg
@@ -526,6 +526,7 @@ c['schedulers'] = [
                        ]),
     pandas_bot.scheduler([
                         'pandas-py2.x-sparc',
+                        'pandas-py3.x-sparc',
                        ]),
     nipy_bot.nightly_scheduler(['nipy-doc-builder'], 'doc', 2, 01, True),
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
@@ -937,9 +938,9 @@ c['builders'] += regreg_bot.build_builders(
      ('regreg-py2.6-sparc', sparc_slaves)))
 # Pandas - can be tested only on recent debian releases
 c['builders'] += pandas_bot.build_builders(
-    (('pandas-py2.x-sparc', sparc_slaves_recent)))
+    (('pandas-py2.x-sparc', sparc_slaves_recent),))
 # and python3 builders
-c['builders'] += dipy_bot.build_builders(
+c['builders'] += pandas_bot.build_builders(
     (('pandas-py3.x-sparc', sparc_slaves_recent),),
     python='python3')
 """ Disabling these guys; they haven't worked for a while
