--- a/master.cfg
+++ b/master.cfg
@@ -428,11 +428,10 @@ regreg_bot = GithubBot('regreg', 'regreg',
 )
 # pandas bot, primarily for sparc testing
 pandas_bot = GithubBot('pydata', 'pandas',
-    test_cmd = nptest_command('pandas', doctests=True),
+    test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest pandas'),
     doc_build_cmd = "make doc",
     built_doc_src = "doc/dist",
     easy_depends = ('nose',),
-    pip_depends = ('cython>=0.17',)
 )
 ####### CHANGESOURCES
 
