ENH: allow to adjust timeout for build (and test)

--- a/master.cfg
+++ b/master.cfg
@@ -132,7 +132,8 @@ class GithubBot(object):
                  pip_depends=(),
                  doc_easy_depends=('sphinx',),
                  src_subdir=None,
-                 download_dir=None):
+                 download_dir=None,
+                 build_timeout=None):
         self.organization = organization
         self.repo = repo
         self.git_url = "git://github.com/%s/%s.git" % (organization, repo)
@@ -147,6 +148,7 @@ class GithubBot(object):
         if download_dir is None:
             download_dir = '%s-dist' % repo
         self.download_dir = download_dir
+        self.build_timeout = build_timeout
 
     def poller(self, branch="master", interval=300):
         return GitPoller(
@@ -242,14 +244,22 @@ class GithubBot(object):
             test_cmd = self.test_cmd
         factory, env, workdir, build_workdir = self._code_build_factory(
             python, easy_depends, pip_depends, pre_cmds)
+        # Additional options for ShellCommands, if provided.  To not
+        # rely on knowing internal logic (either handles None as the
+        # default value), we explicitly construct a dictionary only
+        # with the specified options
+        kwargs = {}
+        if self.build_timeout:
+            kwargs['timeout'] = self.build_timeout
         # Install into virtualenv
         factory.addStep(ShellCommand(
             command=['python', 'setup.py', 'install'],
             env=env,
-            workdir=build_workdir))
+            workdir=build_workdir,
+            **kwargs))
         # Test
         factory.addStep(ShellCommand(command=test_cmd,
-            env=env, workdir=workdir))
+            env=env, workdir=workdir, **kwargs))
         return factory
 
     def bdist_factory(self,
@@ -432,6 +442,7 @@ pandas_bot = GithubBot('pydata', 'pandas',
     doc_build_cmd = "make doc",
     built_doc_src = "doc/dist",
     easy_depends = ('nose',),
+    build_timeout = 3600, # allow for its longer builds/testing especially for sparcs
 )
 ####### CHANGESOURCES
 
