ENH: split sparc sid and wheezy builders to enforce builds of pandas on both

--- a/master.cfg
+++ b/master.cfg
@@ -97,9 +97,9 @@ experimental = ['pi-ApxuMed',]
 linux_64_slaves = ['tom-standard']
 linux_32_slaves = ['bongoslave']
 debian_ppc_slaves = ['debian-ppc-32']
-sparc_slaves_recent = ['nd-bb-slave-sparc-wheezy',
-                       'nd-bb-slave-sparc-sid']
-sparc_slaves = ['nd-bb-slave-sparc'] + sparc_slaves_recent
+sparc_slaves_sid = 'nd-bb-slave-sparc-sid'
+sparc_slaves_wheezy = 'nd-bb-slave-sparc-wheezy'
+sparc_slaves = ['nd-bb-slave-sparc']
 osx_leopard_ppc_slaves = ['osx-10.5-ppc']
 osx_tiger_ppc_slaves = ['osx-mini']
 osx_leopard_intel_slaves = ['osx-10.5']
@@ -535,9 +535,11 @@ c['schedulers'] = [
                           'regreg-py2.6-osx-10.5-intel',
                        ]),
     pandas_bot.scheduler([
-                        'pandas-py2.x-sparc',
-                        'pandas-py3.x-sparc',
-                       ]),
+                        'pandas-py2.x-sid-sparc',
+                        'pandas-py3.x-sid-sparc',
+                        'pandas-py2.x-wheezy-sparc',
+                        'pandas-py3.x-wheezy-sparc',
+                        ]),
     nipy_bot.nightly_scheduler(['nipy-doc-builder'], 'doc', 2, 01, True),
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
     # Windows 32 nightly builds
@@ -948,10 +950,12 @@ c['builders'] += regreg_bot.build_builders(
      ('regreg-py2.6-sparc', sparc_slaves)))
 # Pandas - can be tested only on recent debian releases
 c['builders'] += pandas_bot.build_builders(
-    (('pandas-py2.x-sparc', sparc_slaves_recent),))
+    (('pandas-py2.x-sid-sparc', sparc_slaves_sid),
+     ('pandas-py2.x-wheezy-sparc', sparc_slaves_wheezy)))
 # and python3 builders
 c['builders'] += pandas_bot.build_builders(
-    (('pandas-py3.x-sparc', sparc_slaves_recent),),
+    (('pandas-py3.x-sid-sparc', sparc_slaves_sid),
+     ('pandas-py3.x-wheezy-sparc', sparc_slaves_wheezy)),
     python='python3')
 """ Disabling these guys; they haven't worked for a while
 c['builders'].append(
