pandas: Run  tests via xvfb,  pip apiclient, and no doctests

--- a/master.cfg
+++ b/master.cfg
@@ -438,10 +438,11 @@ regreg_bot = GithubBot('regreg', 'regreg',
 )
 # pandas bot, primarily for sparc testing
 pandas_bot = GithubBot('pydata', 'pandas',
-    test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest pandas'),
+    test_cmd = shlex.split('xvfb-run --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe pandas'),
     doc_build_cmd = "make doc",
     built_doc_src = "doc/dist",
     easy_depends = ('nose',),
+    pip_depends = ('apiclient',),
     build_timeout = 3600, # allow for its longer builds/testing especially for sparcs
 )
 ####### CHANGESOURCES
